--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "COPOM-OFF | Team User List",
-  "short_name": "COPOM-OFF",
+  "short_name": "OFF",
   "description": "Team scheduling application",
   "start_url": "/",
   "display": "standalone",
@@ -11,6 +11,12 @@
       "src": "favicon.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "apple-touch-icon.png",
